examples/semantics/errors/error22.grace
fun error22 () : nothing
{
	foo(10);
}
